# agentskills_eval

./: .env.example  .gitignore  AGENTS.md  README.md  common.py  context.py  eval.py  interactive.py  personality.py  pyproject.toml  runner.py  test_context.md
docs/plans/: 2026-02-20-personality-files-design.md
evals/: cases.jsonl
